istio/istio-1.14.1/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  labels:
    app: runningrecords
    component: redis-server
    type: single
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runningrecords
      component: redis-server
      type: single
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: runningrecords
        component: redis-server
        type: single
    spec:
      containers:
      - name: redis-server
        image: ndescusseb77/redis:alpine
        ports:
        - containerPort: 6379
          name: tcp
          protocol: TCP
        # data volume where redis writes data
        volumeMounts:
        - name: data
          mountPath: /run/desktop/mnt/host/c/data
          readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: redis-data
