istio/istio-1.14.1/runningrecords-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runningrecords-v1
  labels:
    app: runningrecords
    component: webservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runningrecords
      component: webservice
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: runningrecords
        component: webservice
        version: v1
        redeploy: '1'
    spec:
      containers:
      - name: webservice
        image: ndescusseb77/runningrecords:runningrecords-v1
        ports:
        - name: webservice
          containerPort: 3000
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runningrecords-v2
  labels:
    app: runningrecords
    component: webservice
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runningrecords
      component: webservice
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: runningrecords
        component: webservice
        version: v2
        redeploy: '1'
    spec:
      containers:
      - name: webservice
        image: ndescusseb77/runningrecords:runningrecords-v2
        ports:
        - name: webservice
          containerPort: 3000
          protocol: TCP
