istio/istio-1.14.1/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  labels:
    app: runningrecords
    component: redis-server
    type: single
spec:
  ports:
  - port: 6379
    protocol: TCP
    name: tcp
  selector:
    app: runningrecords
    component: redis-server
    type: single
