istio/istio-1.14.1/runningrecords-service.yml
apiVersion: v1
kind: Service
metadata:
  name: runningrecords-service
spec:
  labels:
    app: runningrecords
    component: webservice
spec:
  selector:
    app: runningrecords
    component: webservice
  ports:
    - protocol: TCP
      port: 3000
      name: tcp
